package.json corrected

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "child-diary",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://NataSmit.github.io/child-diary/",
+  "homepage": "https://natasmit.github.io/child-diary/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
